@@ -1,3 +1,6 @@
+2004-10-22 Magus Hagdorn
+ * started PyCF testing framework
+
 2004-09-21 Magnus Hagdorn
  * e2.l.config: fixed wrong output file
 
